compiler/frontends/spar/testsuite/errnopragma.err
errnopragma.spar:9: syntax error
	<$pointless$>
	^^
